[package]
name = "emulated-chains"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Definitions of the fellows emulated relay+para runtimes"

[dependencies]

# Substrate
grandpa-primitives = { package = "sp-consensus-grandpa", version = "13.0.0" }
sp-authority-discovery = { version = "26.0.0" }
sp-runtime = { version = "31.0.1" }
frame-support = { version = "28.0.0" }
sp-core = { version = "28.0.0" }
sp-consensus-babe = { version = "0.32.0" }
pallet-im-online = { version = "27.0.0" }
pallet-staking = { version = "28.0.0" }
beefy-primitives = { package = "sp-consensus-beefy", version = "13.0.0" }

# Polkadot
polkadot-primitives = { version = "7.0.0" }
polkadot-runtime-parachains = { version = "7.0.0" }
polkadot-parachain-primitives = { version = "6.0.0" }

# Cumulus
parachains-common = { version = "7.0.0" }
cumulus-primitives-core = { version = "0.7.0" }
xcm-emulator = { version = "0.5.0" }
penpal-runtime = { version = "0.14.3" }

# Local runtimes
kusama-runtime = { package = "staging-kusama-runtime", path = "../../../relay/kusama" }
kusama-runtime-constants = { path = "../../../relay/kusama/constants" }
polkadot-runtime = { path = "../../../relay/polkadot" }
polkadot-runtime-constants = { path = "../../../relay/polkadot/constants" }
asset-hub-polkadot-runtime = { path = "../../../system-parachains/asset-hubs/asset-hub-polkadot" }
asset-hub-kusama-runtime = { path = "../../../system-parachains/asset-hubs/asset-hub-kusama" }
collectives-polkadot-runtime = { path = "../../../system-parachains/collectives/collectives-polkadot" }
bridge-hub-polkadot-runtime = { path = "../../../system-parachains/bridge-hubs/bridge-hub-polkadot" }
bridge-hub-kusama-runtime = { path = "../../../system-parachains/bridge-hubs/bridge-hub-kusama" }
# TODO: replace with `emulated-integration-tests-common@X.Y.Z` from `polkadot-sdk`
integration-tests-common = { path = "../common" }
