[package]
name = "integration-tests-common"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Common resources for integration testing with xcm-emulator"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0" }
paste = "1.0.14"
serde_json = "1.0.108"

# Substrate
grandpa-primitives = { package = "sp-consensus-grandpa", version = "10.0.0" }
sp-authority-discovery = { version = "23.0.0" }
sp-runtime = { version = "28.0.0" }
frame-support = { version = "25.0.0" }
sp-core = { version = "25.0.0" }
sp-consensus-babe = { version = "0.29.0" }
pallet-assets = { version = "26.0.0" }
pallet-balances = { version = "25.0.0" }
pallet-message-queue = { version = "28.0.0" }
pallet-im-online = { version = "24.0.0" }
pallet-staking = { version = "25.0.0" }
beefy-primitives = { package = "sp-consensus-beefy", version = "10.0.0" }

# Polkadot
polkadot-primitives = { version = "4.0.0" }
polkadot-runtime-parachains = { version = "4.0.0" }
xcm = { package = "staging-xcm", version = "4.0.0" }
pallet-xcm = { version = "4.0.0" }
polkadot-core-primitives = { version = "4.0.0" }
polkadot-parachain-primitives = { version = "3.0.0" }

# Cumulus
parachains-common = { version = "4.0.0" }
cumulus-primitives-core = { version = "0.4.0" }
xcm-emulator = { version = "0.2.0" }
cumulus-pallet-xcmp-queue = { version = "0.4.0" }
cumulus-pallet-parachain-system = { features = ["parameterized-consensus-hook",] , version = "0.4.0" }
asset-test-utils = { version = "4.0.0" }
cumulus-pallet-dmp-queue = { version = "0.4.0" }
penpal-runtime = { version = "0.11.1" }

# Local runtimes
kusama-runtime = { package = "staging-kusama-runtime", path = "../../../relay/kusama" }
kusama-runtime-constants = { path = "../../../relay/kusama/constants" }
polkadot-runtime = { path = "../../../relay/polkadot" }
polkadot-runtime-constants = { path = "../../../relay/polkadot/constants" }
asset-hub-polkadot-runtime = { path = "../../../system-parachains/asset-hubs/asset-hub-polkadot" }
asset-hub-kusama-runtime = { path = "../../../system-parachains/asset-hubs/asset-hub-kusama" }
collectives-polkadot-runtime = { path = "../../../system-parachains/collectives/collectives-polkadot" }
bridge-hub-polkadot-runtime = { path = "../../../system-parachains/bridge-hubs/bridge-hub-polkadot" }
bridge-hub-kusama-runtime = { path = "../../../system-parachains/bridge-hubs/bridge-hub-kusama" }

# Bridges
bp-messages = { version = "0.4.0" }
pallet-bridge-messages = { version = "0.4.0" }
bridge-runtime-common = { version = "0.4.0" }

[features]
runtime-benchmarks = [
    "penpal-runtime/runtime-benchmarks"
]
