[package]
name = "integration-tests-common"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Common resources for integration testing with xcm-emulator"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9" }
paste = "1.0.14"

# Substrate
grandpa-primitives = { package = "sp-consensus-grandpa", version = "13.0.0" }
sp-authority-discovery = { version = "26.0.0" }
sp-runtime = { version = "31.0.1" }
frame-support = { version = "28.0.0" }
sp-core = { version = "28.0.0" }
sp-consensus-babe = { version = "0.32.0" }
pallet-assets = { version = "29.0.0" }
pallet-balances = { version = "28.0.0" }
pallet-message-queue = { version = "31.0.0" }
pallet-im-online = { version = "27.0.0" }
beefy-primitives = { package = "sp-consensus-beefy", version = "13.0.0" }

# Polkadot
polkadot-primitives = { version = "7.0.0" }
polkadot-runtime-parachains = { version = "7.0.0" }
xcm = { package = "staging-xcm", version = "7.0.0" }
pallet-xcm = { version = "7.0.0" }

# Cumulus
parachains-common = { version = "7.0.0" }
cumulus-primitives-core = { version = "0.7.0" }
xcm-emulator = { version = "0.5.0" }
cumulus-pallet-xcmp-queue = { version = "0.7.0" }
cumulus-pallet-parachain-system = { features = ["parameterized-consensus-hook",] , version = "0.7.0" }
asset-test-utils = { version = "7.0.1" }
cumulus-pallet-dmp-queue = { version = "0.7.0" }

# Bridges
bp-messages = { version = "0.7.0" }
pallet-bridge-messages = { version = "0.7.0" }
bridge-runtime-common = { version = "0.7.0" }
