[package]
name = "integration-tests-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Emulated integration tests helpers"
publish = false

[dependencies]
paste = { workspace = true }

# Substrate
pallet-balances = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }
pallet-preimage = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-whitelist = { workspace = true, default-features = true }

# Polkadot
xcm = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }


# Cumulus
xcm-emulator = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = true }
asset-test-utils = { workspace = true }
emulated-integration-tests-common = { workspace = true }
