[package]
name = "integration-tests-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Emulated integration tests helpers"
publish = false

[dependencies]
paste = { workspace = true }
hex-literal = { workspace = true }
codec = { workspace = true, default-features = true }

# Substrate
sp-runtime = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }
pallet-core-fellowship = { workspace = true, default-features = true }
pallet-ranked-collective = { workspace = true, default-features = true }

# Polkadot
xcm = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }

# Cumulus
xcm-emulator = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = true }
emulated-integration-tests-common = { workspace = true }
