[package]
name = "bulletin-transaction-storage-primitives"
version = "0.1.0-draft"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Primitives for the Bulletin transaction storage pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cid = { version = "0.11.1", features = ["alloc"], default-features = false }
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
tracing = { version = "0.1", default-features = false }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"cid/std",
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"tracing/std",
]
