[package]
name = "bulletin-pallets-common"
version = "0.1.0-draft"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Common utilities for Bulletin pallets and/or runtime"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

polkadot-sdk-frame = { workspace = true, features = ["runtime"] }
pallet-proxy = { workspace = true }
pallet-sudo = { workspace = true }
pallet-utility = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"pallet-proxy/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"polkadot-sdk-frame/runtime-benchmarks",
]
std = [
	"codec/std",
	"pallet-proxy/std",
	"pallet-sudo/std",
	"pallet-utility/std",
	"polkadot-sdk-frame/std",
	"scale-info/std",
]
try-runtime = [
	"pallet-proxy/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-utility/try-runtime",
	"polkadot-sdk-frame/try-runtime",
]
