[package]
name = "kusama-runtime-constants"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = "1.13.1"

frame-support = { default-features = false , version = "28.0.0" }
primitives = { package = "polkadot-primitives", default-features = false , version = "7.0.0" }
runtime-common = { package = "polkadot-runtime-common", default-features = false , version = "7.0.0" }
sp-runtime = { default-features = false , version = "31.0.1" }
sp-weights = { default-features = false , version = "27.0.0" }
sp-core = { default-features = false , version = "28.0.0" }

xcm-builder = { package = "staging-xcm-builder", default-features = false , version = "7.0.3" }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"xcm-builder/std"
]
