[package]
name = "kusama-runtime-constants"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = { workspace = true }

frame-support = { workspace = true }
primitives = { package = "polkadot-primitives", default-features = false , version = "8.0.1" }
runtime-common = { package = "polkadot-runtime-common", default-features = false , version = "8.0.1" }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
sp-core = { workspace = true }

xcm-builder = { package = "staging-xcm-builder", default-features = false , version = "8.0.1" }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"xcm-builder/std"
]
